--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,114 @@
 page-home {
+    //starts
+    ul {
+        padding: 0px;
+      
+        &.rating li {
+          padding: 5px 10px !important;
+          background: none;
+          color: #ffb400;
+      
+          ion-icon {
+            font-size: 30px;
+          }
+        }
+      }
+      //end starts
 
+    .item-md ion-avatar img{
+        width: 50px !important;
+        height: 50px !important;
+    }
+
+    .user h2{
+        padding: 2px 0;
+    }
+    .user p{
+        font-size: 0.9em;
+        padding: 2px 0;
+    }
+    .user p>i{
+        margin: 0 !important;
+        font-size: 0.8em;
+    }
+
+    .rating p{
+        font-size: 0.7em;
+    }
+
+    .b-card ion-item{
+        min-height: 0;
+        max-height: 1.3em;
+        font-size: 1.2em;
+    }
+
+    .spinner-container {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        background-color:none !important;
+    }
+ 
+    .picture img{
+        width: 100px;
+        height: 100px;
+        border: 2px #000 solid;
+        border-radius: 100%;
+        
+    } 
+     
+    .main i{
+        margin: 0 !important
+    }
+    .main p{
+        font-size: 0.9em;
+    }
+
+    .job{
+        border: 1px solid #ddd;
+        margin: 10px;
+        line-height: 1;
+    } 
+
+    // .right i, .left i{
+    //     margin-right: 4px !important;
+    // }
+    
+    // .left i.fa-share {
+    //     margin-left: 10px;
+    // }
+    
+    
+
+    //Jobs === 
+    
+    ion-list-header{
+        margin: 0 !important;
+        height: 50px;
+    }
+
+    ion-list{
+        margin-bottom: 0 !important;
+    }
+
+    ion-item{
+        padding-left: 5px !important;
+    }
+ 
+    
+   ion-col i, ion-item i{
+       margin-right: 0 !important;
+   }
+
+   ion-grid{
+       font-size: 1em;
+   }
+ 
+   .svg-inline--fa{
+       margin: 0 5px 0 0 !important;
+
+   }    
+
+    
+ 
 }
