--- a/src/pages/user-details/user-details.scss
+++ b/src/pages/user-details/user-details.scss
@@ -52,8 +52,9 @@ page-user-details {
        padding: 5px;
    }
 
-   .rating i{
-       padding: 5px;
+   .feedback{
+       text-align: center;
+       font-weight: bold;
    }
  
   
