--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,7 +13,11 @@
       <ion-item menuClose ion-item icon-left (click)="nav.setRoot(pages2.appointmentPage)">
         <ion-icon name="calendar" item-start></ion-icon>
           Appointment
-      </ion-item>
+      </ion-item> 
+      <ion-item menuClose ion-item icon-left (click)="nav.setRoot(pages2.myJobsPage)">
+        <ion-icon name="briefcase" item-start></ion-icon>
+          My Jobs
+      </ion-item> 
       <ion-item menuClose ion-item icon-left (click)="nav.setRoot(pages2.profilePage)">
         <ion-icon name="person" item-start></ion-icon>
           Profile
