--- a/src/pages/job-details/job-details.scss
+++ b/src/pages/job-details/job-details.scss
@@ -22,5 +22,14 @@
     .banner p{
       margin-top: 0;
     }
+
+    .info h2{
+      font-weight: normal;
+      font-size: 1.5em;
+    }
+    .info p{
+      font-weight: normal;
+      font-size: 1em;
+    }
   }
 }
