--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -6,7 +6,17 @@ page-login {
     .item-label-floating .input-wrapper{
         border-bottom: 2px solid;
     }
+    ion-item.item{
+        background-color: transparent;
+    }
+    .item-inner, ion-label.label, i{
+        color: #fff !important;
+        font-weight: bold;
+    } 
 
-
+    .button{
+        color: #fff;
+    }
+ 
 
 }
