--- a/src/pages/jobs/jobs.scss
+++ b/src/pages/jobs/jobs.scss
@@ -1,42 +1,47 @@
-page-jobs {
+page-jobs { 
+
     .job{
-        border: 1px solid #ddd;
         margin: 10px;
-        line-height: 1;
     } 
-    
-    ion-list-header{
-        margin: 0 !important;
-        height: 50px;
+    .job i{
+        margin: 0 !important; 
+    }
+    .job p{
+        font-size: 1em; 
+    }
+
+ 
+    ion-thumbnail img{
+        padding: 10%;
     }
 
     ion-list{
         margin-bottom: 0 !important;
     }
 
-    ion-item{
-        padding-left: 5px !important;
+    ion-label i{
+        color: #009688
     }
 
-    h2{
-        font-size: 1.2em !important;
-        font-weight: bold;
+    ion-list-header.item{
+        background-color: #67beb5;
+        color: #fff;
     }
-
-    p{
-        font-size: 1em !important;
-    }
-
     
    ion-col i, ion-item i{
        margin-right: 0 !important;
    }
 
-   ion-grid{
-       font-size: 1em;
+
+   .button{
+    color: #fff !important;
    }
 
-   p.address{
-       font-size: 0.8em !important
-   }
+   .spinner-container {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        background:transparent !important;
+    } 
+
 }
