Re-factoring bug fix

--- a/src/pages/candidates/candidates.scss
+++ b/src/pages/candidates/candidates.scss
@@ -9,4 +9,10 @@ page-candidates {
     ion-item.user{
         margin: 10px 0 !important;
     } 
+    h2{
+        padding-bottom: 8px;
+    }
+    .item i{
+        margin: 4px 2px !important
+    }
 }
